--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"typesafe-i18n": "typesafe-i18n"
 	},
 	"devDependencies": {
+		"@fontsource/outfit": "^5.0.13",
+		"@fontsource/roboto-mono": "^5.0.18",
+		"@fontsource/vollkorn": "^5.0.20",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
