--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "prettier-plugin-tailwindcss": "^0.5.5",
-    "svelte": "^4.2.7",
+    "svelte": "^5.0.0-next.175",
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.4.4",
     "tslib": "^2.4.1",
@@ -36,6 +36,7 @@
   "type": "module",
   "dependencies": {
     "concurrently": "^8.2.2",
+    "oidc-client-ts": "^3.0.1",
     "svelte-adapter-bun": "^0.5.2",
     "typesafe-i18n": "^5.26.2"
   }
