--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,8 @@
   "type": "module",
   "dependencies": {
     "concurrently": "^8.2.2",
+    "convert-iso-codes": "^1.0.9",
+    "flag-icons": "^7.2.3",
     "oidc-client-ts": "^3.0.1",
     "svelte-adapter-bun": "^0.5.2",
     "typesafe-i18n": "^5.26.2"
