--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "flag-icons": "^7.2.3",
     "oidc-client-ts": "^3.0.1",
     "svelte-adapter-bun": "^0.5.2",
-    "typesafe-i18n": "^5.26.2"
+    "typesafe-i18n": "^5.26.2",
+    "world-countries": "^5.0.0"
   }
 }
