--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Copy this file to .env and replace the values with your own
-
-VITE_FRONTEND_URL=localhost:5173
-VITE_AUTH_DOMAIN=yoursite.com
-VITE_AUTH_CLIENT_ID="12345@someproject"
+PORT=3000
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+PUBLIC_HOSTNAME=http://localhost:5173
+PUBLIC_OIDC_AUTHORITY=http://localhost:8080
+PUBLIC_OIDC_CLIENT_ID=delegator
