🚧 wip (MUNify): working oidc branch: oidc

--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -28,18 +28,7 @@ services:
             {
               "issuerId": "delegator",
               "tokenExpiry": 120,
-              "requestMappings": [
-                {
-                  "requestParam": "scope",
-                  "match": "scope1",
-                  "claims": {
-                    "sub": "subByScope",
-                    "aud": [
-                      "audByScope"
-                    ]
-                  }
-                }
-              ]
+              "requestMappings": []
             }
           ]
         }
