--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "@sinclair/typebox": "^0.32.34",
     "concurrently": "^8.2.2",
     "convert-iso-codes": "^1.0.9",
+    "cryptr": "^6.3.0",
     "elysia": "^1.0.27",
     "flag-icons": "^7.2.3",
-    "oidc-client-ts": "^3.0.1",
+    "openid-client": "^5.6.5",
     "prisma": "^5.16.2",
     "svelte-adapter-bun": "^0.5.2",
     "world-countries": "^5.0.0"
