--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "frontend",
+  "name": "munify-delegator",
   "version": "0.0.1",
-  "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "concurrently \"vite\" \"docker compose -f ./dev.docker-compose.yml up \"",
+    "dev": "concurrently \"bun run dev:server\" \"bun run dev:docker\"",
+    "dev:server": "vite",
+    "dev:docker": "docker compose -f ./dev.docker-compose.yml up",
     "vite": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
@@ -16,7 +18,6 @@
     "@fontsource/outfit": "^5.0.13",
     "@fontsource/roboto-mono": "^5.0.18",
     "@fontsource/vollkorn": "^5.0.20",
-    "@sveltejs/adapter-auto": "^3.2.2",
     "@sveltejs/kit": "^2.5.18",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "autoprefixer": "^10.4.19",
@@ -32,10 +33,7 @@
     "tslib": "^2.6.3",
     "typescript": "^5.5.3",
     "vite": "^5.3.3",
-    "@inlang/paraglide-js": "1.11.2"
-  },
-  "type": "module",
-  "dependencies": {
+    "@inlang/paraglide-js": "1.11.2",
     "@casl/ability": "^6.7.1",
     "@casl/prisma": "^1.4.1",
     "@elysiajs/eden": "^1.0.14",
@@ -48,8 +46,10 @@
     "elysia": "^1.0.27",
     "flag-icons": "^7.2.3",
     "openid-client": "^5.6.5",
-    "prisma": "^5.16.2",
     "svelte-adapter-bun": "^0.5.2",
     "world-countries": "^5.0.0"
+  },
+  "dependencies": {
+    "prisma": "^5.16.2"
   }
 }
