🐞 fix (AUTH): correct image setup for deployment branch: oidc

--- a/package.json
+++ b/package.json
@@ -26,30 +26,28 @@
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "prismabox": "^1.1.2",
     "svelte": "^5.0.0-next.175",
     "svelte-check": "^3.8.4",
     "tailwindcss": "^3.4.4",
     "tslib": "^2.6.3",
     "typescript": "^5.5.3",
     "vite": "^5.3.3",
-    "@inlang/paraglide-js": "1.11.2",
     "@casl/ability": "^6.7.1",
     "@casl/prisma": "^1.4.1",
     "@elysiajs/eden": "^1.0.14",
     "@inlang/paraglide-sveltekit": "0.11.0",
-    "@prisma/client": "^5.16.2",
     "@sinclair/typebox": "^0.32.34",
     "concurrently": "^8.2.2",
     "convert-iso-codes": "^1.0.9",
     "cryptr": "^6.3.0",
-    "elysia": "^1.0.27",
     "flag-icons": "^7.2.3",
     "openid-client": "^5.6.5",
     "svelte-adapter-bun": "^0.5.2",
-    "world-countries": "^5.0.0"
-  },
-  "dependencies": {
+    "world-countries": "^5.0.0",
+    "@inlang/paraglide-js": "1.11.2",
+    "@prisma/client": "^5.16.2",
+    "elysia": "^1.0.27",
+    "prismabox": "^1.1.2",
     "prisma": "^5.16.2"
   }
 }
