--- a/.dockerignore
+++ b/.dockerignore
@@ -20,6 +20,4 @@ Thumbs.db
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
-Dockerfile
-dev.docker-compose.yml
-.env.example
+prisma/generated
