--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -33,5 +33,22 @@ services:
           ]
         }
 
+  app:
+    image: munifydelegator
+    depends_on:
+      - postgres
+    network_mode: host
+    environment:
+      - PORT=3000
+      - DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+
+      - PUBLIC_OIDC_AUTHORITY=http://localhost:8080
+      # - PUBLIC_OIDC_AUTHORITY=https://guard.munify.cloud
+
+      - PUBLIC_OIDC_CLIENT_ID=delegator
+      # - PUBLIC_OIDC_CLIENT_ID=275671515582758948@dev
+
+      - SECRET=123
+
 volumes:
   delegator-dev:
