--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -8,7 +8,8 @@ on:
       - main
 
 jobs:
-  frontend:
+  build:
+    name: Build and publish container images
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
