--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "svelte": "^5.0.0-next.175",
     "svelte-check": "^3.8.4",
-    "tailwindcss": "^3.4.5",
+    "tailwindcss": "^3.4.6",
     "tslib": "^2.6.3",
     "typescript": "^5.5.3",
     "vite": "^5.3.4",
     "@casl/ability": "^6.7.1",
     "@casl/prisma": "^1.4.1",
-    "@elysiajs/eden": "^1.0.14",
+    "@elysiajs/eden": "^1.1.0",
     "@inlang/paraglide-sveltekit": "0.11.0",
     "@sinclair/typebox": "^0.32.34",
     "concurrently": "^8.2.2",
@@ -47,7 +47,7 @@
     "@inlang/paraglide-js": "1.11.2",
     "@prisma/client": "^5.17.0",
     "elysia": "^1.1.2",
-    "prismabox": "^1.1.4",
+    "prismabox": "1.1.3",
     "prisma": "^5.17.0"
   }
 }
