--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -15,23 +15,23 @@ services:
     volumes:
       - delegator-dev:/var/lib/postgresql/data
 
-  mockoidc:
-    image: ghcr.io/navikt/mock-oauth2-server:2.1.5
-    ports:
-      - 8080:8080
-    environment:
-      JSON_CONFIG: >
-        {
-          "interactiveLogin": true,
-          "httpServer": "NettyWrapper",
-          "tokenCallbacks": [
-            {
-              "issuerId": "delegator",
-              "tokenExpiry": 120,
-              "requestMappings": []
-            }
-          ]
-        }
+  # mockoidc:
+  #   image: ghcr.io/navikt/mock-oauth2-server:2.1.5
+  #   ports:
+  #     - 8080:8080
+  #   environment:
+  #     JSON_CONFIG: >
+  #       {
+  #         "interactiveLogin": true,
+  #         "httpServer": "NettyWrapper",
+  #         "tokenCallbacks": [
+  #           {
+  #             "issuerId": "delegator",
+  #             "tokenExpiry": 120,
+  #             "requestMappings": []
+  #           }
+  #         ]
+  #       }
 
   # app:
   #   image: munifydelegator
