--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "elysia": "^1.0.27",
     "prismabox": "^1.1.3",
     "prisma": "^5.16.2"
+  },
+  "dependencies": {
+    "mermaid": "^10.9.1"
   }
 }
