--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -15,23 +15,26 @@ services:
     volumes:
       - delegator-dev:/var/lib/postgresql/data
 
-  # mockoidc:
-  #   image: ghcr.io/navikt/mock-oauth2-server:2.1.5
-  #   ports:
-  #     - 8080:8080
-  #   environment:
-  #     JSON_CONFIG: >
-  #       {
-  #         "interactiveLogin": true,
-  #         "httpServer": "NettyWrapper",
-  #         "tokenCallbacks": [
-  #           {
-  #             "issuerId": "delegator",
-  #             "tokenExpiry": 120,
-  #             "requestMappings": []
-  #           }
-  #         ]
-  #       }
+# When using the mock server this can be helpful to paste into the form to create a valid token with claims etc.
+# {
+#  "email": "my@mail.com",
+#  "family_name": "Munify",
+#  "given_name": "Delegator Jr.",
+#  "preferred_username": "delegatoruser_123",
+#  "locale": "de"
+# }
+  mockoidc:
+    image: ghcr.io/navikt/mock-oauth2-server:2.1.5
+    ports:
+      - 8080:8080
+    environment:
+      JSON_CONFIG: >
+        {
+          "interactiveLogin": true,
+          "httpServer": "NettyWrapper",
+          "tokenCallbacks": []
+        }
+
 
   # app:
   #   image: munifydelegator
