--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "prisma": "^5.17.0"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "esbuild": "^0.23.0",
     "jose": "^5.6.3",
     "mermaid": "^10.9.1",
     "numeral": "^2.0.6",
