🚧 wip (MUNify) branch: individual-application

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "typecheck": "tsc --noEmit",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check .",
     "format": "prettier --write ."
@@ -22,21 +23,21 @@
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.10",
-    "postcss": "^8.4.40",
+    "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.6",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "svelte": "^5.0.0-next.208",
+    "svelte": "^5.0.0-next.210",
     "svelte-check": "^3.8.5",
-    "tailwindcss": "^3.4.7",
+    "tailwindcss": "^3.4.8",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4",
-    "vite": "^5.3.5",
+    "vite": "^5.4.0",
     "@casl/ability": "^6.7.1",
     "@casl/prisma": "^1.4.1",
     "@elysiajs/eden": "^1.1.2",
     "@inlang/paraglide-sveltekit": "0.11.0",
-    "@sinclair/typebox": "^0.32.35",
+    "@sinclair/typebox": "^0.33.0",
     "concurrently": "^8.2.2",
     "convert-iso-codes": "^1.0.9",
     "cryptr": "^6.3.0",
@@ -45,10 +46,10 @@
     "svelte-adapter-bun": "^0.5.2",
     "world-countries": "^5.0.0",
     "@inlang/paraglide-js": "1.11.2",
-    "@prisma/client": "^5.17.0",
+    "@prisma/client": "^5.18.0",
     "elysia": "^1.1.5",
     "prismabox": "^1.1.8",
-    "prisma": "^5.17.0",
+    "prisma": "^5.18.0",
     "jose": "^5.6.3",
     "mermaid": "^10.9.1"
   }
