🚧 wip (App Frontend): Dashboard branch: delegator/dashboard

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,4 @@ PUBLIC_OIDC_AUTHORITY=http://localhost:8080
 PUBLIC_OIDC_CLIENT_ID=delegator
 # PUBLIC_OIDC_CLIENT_ID=275671515582758948@dev
 
-
+DEVMODE=true
