--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -42,6 +42,8 @@ jobs:
           flavor: |
             latest=false
           tags: |
+            type=raw,value=${{ github.sha }}
+
             type=semver,pattern={{version}},value=${{ github.event.release.tag_name }},enable=${{ github.event_name == 'release' }}
 
             type=raw,value=latest,enable=${{ github.event_name == 'release' && !github.event.release.prerelease }}
