--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       # - PORT=3000
       # - HOST=0.0.0.0
       - DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
+      # change this to something long, secure and truly random
       - SECRET=123
 
       # variables which are exposed to the client must be prefixed with PUBLIC_
