--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -27,6 +27,9 @@ services:
       # - HOST=0.0.0.0
       - DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
       - SECRET=123
+      # if your setup supports PROTOCOL_HEADER or HOST_HEADER you don't need to set these
+      # please see the adapter/hosting options for more information
+      - ORIGIN=https://{your orign}
 
       # variables which are exposed to the client must be prefixed with PUBLIC_
       - PUBLIC_OIDC_AUTHORITY=https://guard.munify.cloud
