✨ feat (App Frontend): wip branch: dashboard

--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -23,17 +23,17 @@ services:
   #  "preferred_username": "delegatoruser_123",
   #  "locale": "de"
   # }
-  mockoidc:
-    image: ghcr.io/navikt/mock-oauth2-server:2.1.5
-    ports:
-      - 8080:8080
-    environment:
-      JSON_CONFIG: >
-        {
-          "interactiveLogin": true,
-          "httpServer": "NettyWrapper",
-          "tokenCallbacks": []
-        }
+  # mockoidc:
+  #   image: ghcr.io/navikt/mock-oauth2-server:2.1.5
+  #   ports:
+  #     - 8080:8080
+  #   environment:
+  #     JSON_CONFIG: >
+  #       {
+  #         "interactiveLogin": true,
+  #         "httpServer": "NettyWrapper",
+  #         "tokenCallbacks": []
+  #       }
 
   # app:
   #   image: munifydelegator
