✨ feat (App Frontend): Supervisor Frontend and other stuff branch: dashboard

--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -1,7 +1,10 @@
 {
 	"$schema": "https://inlang.com/schema/project-settings",
 	"sourceLanguageTag": "de",
-	"languageTags": ["de", "en"],
+	"languageTags": [
+		"de",
+		"en"
+	],
 	"modules": [
 		"https://cdn.jsdelivr.net/npm/@inlang/message-lint-rule-empty-pattern@latest/dist/index.js",
 		"https://cdn.jsdelivr.net/npm/@inlang/message-lint-rule-missing-translation@latest/dist/index.js",
