--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,4 @@ PUBLIC_OIDC_AUTHORITY=http://localhost:8080
 PUBLIC_OIDC_CLIENT_ID=delegator
 # PUBLIC_OIDC_CLIENT_ID=275671515582758948@dev
 
-DEVMODE=true
+OIDC_ROLE_CLAIM=urn:zitadel:iam:org:project:275671427955294244:roles
