--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ PUBLIC_OIDC_CLIENT_ID=delegator
 # PUBLIC_OIDC_CLIENT_ID=275671515582758948@dev
 
 OIDC_ROLE_CLAIM=urn:zitadel:iam:org:project:275671427955294244:roles
+
+PUBLIC_FEEDBACK_URL=https://fb-delegator.dmun.de
