✨ feat (MUNify): add version display in footer branch: main

--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -38,6 +38,9 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
+          build-args: |
+            VERSION=${{ github.event.release.tag_name }}
+            SHA=${{ github.sha }}
           flavor: |
             latest=false
           images: |
