--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -24,17 +24,17 @@ services:
   #  "locale": "de",
   #  "urn:zitadel:iam:org:project:275671427955294244:roles": {"admin": {}}
   # }
-  # mockoidc:
-  #   image: ghcr.io/navikt/mock-oauth2-server:2.1.5
-  #   ports:
-  #     - 8080:8080
-  #   environment:
-  #     JSON_CONFIG: >
-  #       {
-  #         "interactiveLogin": true,
-  #         "httpServer": "NettyWrapper",
-  #         "tokenCallbacks": []
-  #       }
+  mockoidc:
+    image: ghcr.io/navikt/mock-oauth2-server:2.1.5
+    ports:
+      - 8080:8080
+    environment:
+      JSON_CONFIG: >
+        {
+          "interactiveLogin": true,
+          "httpServer": "NettyWrapper",
+          "tokenCallbacks": []
+        }
 
   # app:
   #   image: munifydelegator
