🧼 format & lint (App Frontend): branch: admin-pages-access-control

--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -62,7 +62,7 @@ services:
       - postgres
 
     environment:
-      PROJECT_NAME: "MUNify DELEGATOR"
+      PROJECT_NAME: 'MUNify DELEGATOR'
       POSTGRES_URL: postgres://postgres:postgres@postgres:5432/postgres
       PRISMA_STUDIO_PORT: 5555
       POSTGRES_PATH: /postgres
