--- a/package.json
+++ b/package.json
@@ -1,19 +1,6 @@
 {
 	"name": "munify-delegator",
 	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "concurrently \"bun run dev:server\" \"bun run dev:docker\"",
-		"dev:server": "vite",
-		"dev:docker": "docker compose -f ./dev.docker-compose.yml up",
-		"vite": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check .",
-		"format": "prettier --write ."
-	},
 	"devDependencies": {
 		"@casl/ability": "^6.7.1",
 		"@casl/prisma": "^1.4.1",
@@ -59,9 +46,23 @@
 		"typescript": "^5.6.2",
 		"vanilla-cookieconsent": "^3.0.1",
 		"vite": "^5.4.6",
-		"world-countries": "^5.0.0"
+		"world-countries": "^5.0.0",
+		"node-schedule": "^2.1.1"
 	},
 	"prisma": {
 		"seed": "bun run prisma/seed.ts"
-	}
+	},
+	"scripts": {
+		"dev": "concurrently \"bun run dev:server\" \"bun run dev:docker\"",
+		"dev:server": "vite",
+		"dev:docker": "docker compose -f ./dev.docker-compose.yml up",
+		"vite": "vite dev",
+		"build": "vite build && bun ./tasksBuild.ts",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check .",
+		"format": "prettier --write ."
+	},
+	"type": "module"
 }
