--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sinclair/typebox": "^0.33.12",
 		"@sveltejs/kit": "^2.5.28",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
+		"@types/node-schedule": "^2.1.7",
 		"@zerodevx/svelte-toast": "^0.9.5",
 		"autoprefixer": "^10.4.20",
 		"concurrently": "^9.0.1",
