✨ feat (Miscellaneous): Slack Updates branch: syncing

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@inlang/paraglide-sveltekit": "0.11.0",
 		"@prisma/client": "^5.19.1",
 		"@sinclair/typebox": "^0.33.12",
+		"@slack/webhook": "^7.0.3",
 		"@sveltejs/kit": "^2.5.28",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
 		"@types/node-schedule": "^2.1.7",
