⬆️ improvement (Miscellaneous): add syncjob to package.json branch: syncing

--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"sync": "./tasksMain.js"
 	},
 	"type": "module"
 }
