--- a/package.json
+++ b/package.json
@@ -1,19 +1,6 @@
 {
 	"name": "munify-delegator",
 	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "concurrently \"bun run dev:server\" \"bun run dev:docker\"",
-		"dev:server": "vite",
-		"dev:docker": "docker compose -f ./dev.docker-compose.yml up",
-		"vite": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check .",
-		"format": "prettier --write ."
-	},
 	"devDependencies": {
 		"@casl/ability": "^6.7.1",
 		"@casl/prisma": "^1.4.1",
@@ -26,8 +13,10 @@
 		"@inlang/paraglide-sveltekit": "0.11.0",
 		"@prisma/client": "^5.19.1",
 		"@sinclair/typebox": "^0.33.12",
+		"@slack/webhook": "^7.0.3",
 		"@sveltejs/kit": "^2.5.28",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
+		"@types/node-schedule": "^2.1.7",
 		"@zerodevx/svelte-toast": "^0.9.5",
 		"autoprefixer": "^10.4.20",
 		"concurrently": "^9.0.1",
@@ -42,6 +31,7 @@
 		"lefthook": "^1.7.15",
 		"mermaid": "^11.2.1",
 		"nanoid": "^5.0.7",
+		"node-schedule": "^2.1.1",
 		"numeral": "^2.0.6",
 		"openid-client": "^5.7.0",
 		"postcss": "^8.4.47",
@@ -56,6 +46,7 @@
 		"svelte-headless-table": "^0.18.2",
 		"tailwindcss": "^3.4.12",
 		"tslib": "^2.7.0",
+		"tsup": "^8.3.0",
 		"typescript": "^5.6.2",
 		"vanilla-cookieconsent": "^3.0.1",
 		"vite": "^5.4.6",
@@ -63,5 +54,18 @@
 	},
 	"prisma": {
 		"seed": "bun run prisma/seed.ts"
-	}
+	},
+	"scripts": {
+		"dev": "concurrently \"bun run dev:server\" \"bun run dev:docker\"",
+		"dev:server": "vite",
+		"dev:docker": "docker compose -f ./dev.docker-compose.yml up",
+		"vite": "vite dev",
+		"build": "vite build && bun ./tasksBuild.ts",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check .",
+		"format": "prettier --write ."
+	},
+	"type": "module"
 }
