--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@weblogin/trendchart-elements": "^2.0.1",
 		"@zerodevx/svelte-toast": "^0.9.5",
 		"autoprefixer": "^10.4.20",
+		"chart.js": "^4.4.4",
 		"concurrently": "^9.0.1",
 		"convert-iso-codes": "^1.0.10",
 		"cryptr": "^6.3.0",
@@ -43,6 +44,7 @@
 		"prismabox": "^1.1.14",
 		"svelte": "^5.0.0-next.254",
 		"svelte-adapter-bun": "^0.5.2",
+		"svelte-chartjs": "^3.1.5",
 		"svelte-check": "^4.0.2",
 		"svelte-headless-table": "^0.18.2",
 		"tailwindcss": "^3.4.12",
