🔤 typing (App Frontend): branch: admin-tools

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,5 +82,6 @@
 			"path": "/workspaces/munify/.vscode/macros.ts",
 			"name": "OpenI18n"
 		}
-	]
+	],
+	"css.customData": [".vscode/tailwind.json"]
 }
