--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"numeral": "^2.0.6",
 		"openid-client": "^5.7.0",
 		"postcss": "^8.4.47",
+		"postcss-load-config": "^6.0.1",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.6",
@@ -49,7 +50,6 @@
 		"svelte-chartjs": "^3.1.5",
 		"svelte-check": "^4.0.2",
 		"svelte-drawer-component": "^1.2.2",
-		"svelte-headless-table": "^0.18.2",
 		"svelte-table": "^0.6.3",
 		"tailwindcss": "^3.4.12",
 		"tslib": "^2.7.0",
