--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 		"@casl/prisma": "^1.4.1",
 		"@elysiajs/eden": "^1.1.3",
 		"@faker-js/faker": "^9.0.1",
+		"@fontsource/indie-flower": "^5.1.0",
+		"@fontsource/nothing-you-could-do": "^5.1.0",
 		"@fontsource/outfit": "^5.1.0",
 		"@fontsource/roboto-mono": "^5.1.0",
 		"@fontsource/vollkorn": "^5.1.0",
