⬆️ improvement (App Frontend): Enable Image Optimization branch: 81-enable-image-optimization

--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
 		"lint": "prettier --check .",
 		"format": "prettier --write ."
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/enhanced-img": "^0.3.8"
+	}
 }
