--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
 		"@prisma/client": "^5.19.1",
 		"@sinclair/typebox": "^0.33.12",
 		"@slack/webhook": "^7.0.3",
+		"@svelte-plugins/datepicker": "^1.0.9",
 		"@sveltejs/kit": "^2.5.28",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
 		"@types/node-schedule": "^2.1.7",
+		"@weblogin/trendchart-elements": "^2.0.1",
 		"@zerodevx/svelte-toast": "^0.9.5",
 		"autoprefixer": "^10.4.20",
+		"chart.js": "^4.4.4",
 		"concurrently": "^9.0.1",
 		"convert-iso-codes": "^1.0.10",
 		"cryptr": "^6.3.0",
+		"csv-stringify": "^6.5.1",
 		"daisyui": "^4.12.10",
+		"date-fns": "^4.1.0",
 		"elysia": "^1.1.13",
 		"esbuild": "^0.23.1",
 		"flag-icons": "^7.2.3",
@@ -35,6 +40,7 @@
 		"numeral": "^2.0.6",
 		"openid-client": "^5.7.0",
 		"postcss": "^8.4.47",
+		"postcss-load-config": "^6.0.1",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.6",
@@ -42,8 +48,10 @@
 		"prismabox": "^1.1.14",
 		"svelte": "^5.0.0-next.254",
 		"svelte-adapter-bun": "^0.5.2",
+		"svelte-chartjs": "^3.1.5",
 		"svelte-check": "^4.0.2",
-		"svelte-headless-table": "^0.18.2",
+		"svelte-drawer-component": "^1.2.2",
+		"svelte-table": "^0.6.3",
 		"tailwindcss": "^3.4.12",
 		"tslib": "^2.7.0",
 		"tsup": "^8.3.0",
