--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@prisma/client": "^5.19.1",
 		"@sinclair/typebox": "^0.33.12",
 		"@slack/webhook": "^7.0.3",
+		"@sveltejs/enhanced-img": "^0.3.8",
 		"@svelte-plugins/datepicker": "^1.0.9",
 		"@sveltejs/kit": "^2.5.28",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
