--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -2,7 +2,7 @@ name: Build and publish container images
 
 on:
   release:
-    types: [created]
+    types: [published]
   push:
     branches:
       - main
