✨ feat (App Backend): listmonk mail sync task branch: listmonk-mail-sync

--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
 		"@prisma/client": "^5.19.1",
 		"@sinclair/typebox": "^0.33.12",
 		"@slack/webhook": "^7.0.3",
-		"@sveltejs/enhanced-img": "^0.3.8",
 		"@svelte-plugins/datepicker": "^1.0.9",
+		"@sveltejs/enhanced-img": "^0.3.8",
 		"@sveltejs/kit": "^2.5.28",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
+		"@types/lodash": "^4.17.10",
 		"@types/node-schedule": "^2.1.7",
 		"@weblogin/trendchart-elements": "^2.0.1",
 		"@zerodevx/svelte-toast": "^0.9.5",
@@ -35,10 +36,13 @@
 		"fuse.js": "^7.0.0",
 		"jose": "^5.9.2",
 		"lefthook": "^1.7.15",
+		"lodash": "^4.17.21",
 		"mermaid": "^11.2.1",
 		"nanoid": "^5.0.7",
 		"node-schedule": "^2.1.1",
 		"numeral": "^2.0.6",
+		"openapi-fetch": "^0.12.2",
+		"openapi-typescript": "^7.4.1",
 		"openid-client": "^5.7.0",
 		"postcss": "^8.4.47",
 		"postcss-load-config": "^6.0.1",
