--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "munify-delegator",
 	"version": "0.0.1",
 	"devDependencies": {
+		"@sinclair/typebox": "^0.33.16",
 		"@casl/ability": "^6.7.1",
 		"@casl/prisma": "^1.5.0",
 		"@elysiajs/eden": "^1.1.3",
@@ -12,12 +13,10 @@
 		"@inlang/paraglide-js": "1.11.3",
 		"@inlang/paraglide-sveltekit": "0.11.1",
 		"@prisma/client": "^5.20.0",
-		"@sinclair/typebox": "^0.33.15",
 		"@slack/webhook": "^7.0.3",
-		"@sveltejs/enhanced-img": "^0.3.8",
 		"@svelte-plugins/datepicker": "^1.0.9",
-		"@sveltejs/kit": "^2.6.3",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
+		"@sveltejs/kit": "^2.7.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.8",
 		"@types/node-schedule": "^2.1.7",
 		"@weblogin/trendchart-elements": "^2.0.1",
 		"@zerodevx/svelte-toast": "^0.9.6",
@@ -27,12 +26,12 @@
 		"convert-iso-codes": "^1.0.10",
 		"cryptr": "^6.3.0",
 		"csv-stringify": "^6.5.1",
-		"daisyui": "^4.12.12",
+		"daisyui": "^4.12.13",
 		"date-fns": "^4.1.0",
-		"elysia": "^1.1.19",
+		"elysia": "^1.1.21",
 		"flag-icons": "^7.2.3",
 		"fuse.js": "^7.0.0",
-		"jose": "^5.9.3",
+		"jose": "^5.9.4",
 		"lefthook": "^1.7.18",
 		"mermaid": "^11.3.0",
 		"nanoid": "^5.0.7",
@@ -46,19 +45,23 @@
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"prisma": "^5.20.0",
 		"prismabox": "^1.1.14",
-		"svelte": "^5.0.0-next.262",
+		"svelte": "^5.0.0-next.264",
 		"svelte-adapter-bun": "^0.5.2",
 		"svelte-chartjs": "^3.1.5",
-		"svelte-check": "^4.0.4",
+		"svelte-check": "^4.0.5",
 		"svelte-drawer-component": "^1.2.2",
 		"svelte-table": "^0.6.3",
+		"sveltekit-superforms": "^2.19.1",
 		"tailwindcss": "^3.4.13",
 		"tslib": "^2.7.0",
 		"tsup": "^8.3.0",
-		"typescript": "^5.6.2",
+		"typescript": "^5.6.3",
 		"vanilla-cookieconsent": "^3.0.1",
 		"vite": "^5.4.8",
 		"world-countries": "^5.0.0"
+	},
+	"overrides": {
+		"@sinclair/typebox": "^0.33.16"
 	},
 	"prisma": {
 		"seed": "bun run prisma/seed.ts"
