✨ feat (MUNify): working houdini instance branch: refresh-setup

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,8 @@
 {
-	"recommendations": ["rioukkevin.vscode-git-commit", "inlang.vs-code-extension"]
+	"recommendations": [
+		"rioukkevin.vscode-git-commit",
+		"inlang.vs-code-extension",
+		"graphql.vscode-graphql",
+		"prisma.prisma"
+	]
 }
