--- a/package.json
+++ b/package.json
@@ -1,53 +1,49 @@
 {
-	"name": "munify-delegator",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"generate-graphql-client": "bun ./scripts/graphqlClientGenerationConfig.ts",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
-	},
-	"devDependencies": {
-		"@fontsource/outfit": "^5.1.0",
-		"@fontsource/roboto-mono": "^5.1.0",
-		"@fontsource/vollkorn": "^5.1.1",
-		"@graphql-codegen/cli": "^5.0.3",
-		"@graphql-codegen/typescript": "^4.1.0",
-		"@graphql-codegen/typescript-operations": "^4.3.0",
-		"@inlang/paraglide-js": "1.11.3",
-		"@inlang/paraglide-sveltekit": "0.11.1",
-		"@pothos/core": "^4.3.0",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
-		"@tailwindcss/typography": "^0.5.14",
-		"@types/eslint": "^9.6.0",
-		"autoprefixer": "^10.4.20",
-		"daisyui": "^4.12.13",
-		"eslint": "^9.0.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"graphql-codegen-svelte-apollo": "^1.1.0",
-		"graphql-yoga": "^5.7.0",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"prettier-plugin-tailwindcss": "^0.6.5",
-		"prisma": "^5.21.0",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^4.0.0",
-		"tailwindcss": "^3.4.9",
-		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.0.0",
-		"vite": "^5.0.3"
-	},
-	"type": "module",
-	"dependencies": {
-		"graphql": "^16.9.0"
-	}
+    "name": "munify-delegator",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "dev": "vite dev",
+        "generate-graphql-client": "bun ./scripts/graphqlClientGeneration.ts",
+        "build": "vite build",
+        "preview": "vite preview",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "lint": "prettier --check . && eslint .",
+        "format": "prettier --write ."
+    },
+    "devDependencies": {
+        "@fontsource/outfit": "^5.1.0",
+        "@fontsource/roboto-mono": "^5.1.0",
+        "@fontsource/vollkorn": "^5.1.1",
+        "@inlang/paraglide-js": "1.11.3",
+        "@inlang/paraglide-sveltekit": "0.11.1",
+        "@pothos/core": "^4.3.0",
+        "@sveltejs/adapter-auto": "^3.0.0",
+        "@sveltejs/kit": "^2.0.0",
+        "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+        "@tailwindcss/typography": "^0.5.14",
+        "@types/eslint": "^9.6.0",
+        "autoprefixer": "^10.4.20",
+        "daisyui": "^4.12.13",
+        "eslint": "^9.0.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-svelte": "^2.36.0",
+        "globals": "^15.0.0",
+        "graphql-yoga": "^5.7.0",
+        "prettier": "^3.1.1",
+        "prettier-plugin-svelte": "^3.1.2",
+        "prettier-plugin-tailwindcss": "^0.6.5",
+        "prisma": "^5.21.0",
+        "svelte": "^5.0.0-next.1",
+        "svelte-check": "^4.0.0",
+        "tailwindcss": "^3.4.9",
+        "typescript": "^5.6.3",
+        "typescript-eslint": "^8.0.0",
+        "vite": "^5.0.3",
+        "graphql": "^16.9.0",
+        "houdini": "^1.2.64",
+        "houdini-svelte": "^1.2.64"
+    },
+    "type": "module"
 }
