--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,21 @@
 {
-    "extends": "./.svelte-kit/tsconfig.json",
-    "compilerOptions": {
-        "allowJs": true,
-        "checkJs": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "resolveJsonModule": true,
-        "skipLibCheck": true,
-        "sourceMap": true,
-        "strict": true,
-        "moduleResolution": "bundler",
-        "plugins": [
-            {
-                "name": "@0no-co/graphqlsp",
-                "schema": "./src/lib/gqlClient/schema.gql"
-            }
-        ],
-        "rootDirs": [
-            ".",
-            "./.svelte-kit/types",
-            "./$houdini/types"
-        ]
-    }
+	"extends": "./.svelte-kit/tsconfig.json",
+	"compilerOptions": {
+		"allowJs": true,
+		"checkJs": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"sourceMap": true,
+		"strict": true,
+		"moduleResolution": "bundler",
+		"plugins": [
+			{
+				"name": "@0no-co/graphqlsp",
+				"schema": "./src/lib/gqlClient/schema.gql"
+			}
+		],
+		"rootDirs": [".", "./.svelte-kit/types", "./$houdini/types"]
+	}
 }
