--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
-		"generate-graphql-client": "bun ./scripts/graphqlClientGeneration.ts",
+		"dev": "concurrently \"bun run dev:server\" \"bun run dev:docker\"",
+		"dev:server": "vite",
+		"dev:docker": "docker compose -f ./dev.docker-compose.yml up",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -19,31 +20,44 @@
 		"@inlang/paraglide-js": "1.11.3",
 		"@inlang/paraglide-sveltekit": "0.11.1",
 		"@pothos/core": "^4.3.0",
+		"@pothos/plugin-prisma": "^4.2.1",
+		"@pothos/plugin-prisma-utils": "^1.2.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@tailwindcss/typography": "^0.5.14",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
+		"concurrently": "^9.0.1",
+		"cryptr": "^6.3.0",
 		"daisyui": "^4.12.13",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"graphql": "^16.9.0",
 		"graphql-yoga": "^5.7.0",
+		"houdini": "^1.2.64",
+		"houdini-svelte": "^1.2.64",
+		"openid-client": "^5.7.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"prisma": "^5.21.0",
+		"prisma-generator-pothos-codegen": "^0.7.1",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
-		"graphql": "^16.9.0",
-		"houdini": "^1.2.64",
-		"houdini-svelte": "^1.2.64"
+		"zod": "^3.23.8"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@casl/ability": "^6.7.1",
+		"@casl/prisma": "^1.5.0",
+		"@pothos/plugin-complexity": "^4.1.0",
+		"@pothos/plugin-tracing": "^1.1.0"
+	}
 }
