--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@pothos/core": "^4.3.0",
 		"@pothos/plugin-prisma": "^4.2.1",
 		"@pothos/plugin-prisma-utils": "^1.2.0",
+		"@pothos/plugin-simple-objects": "^4.1.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
