--- a/package.json
+++ b/package.json
@@ -14,51 +14,50 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@casl/ability": "^6.7.1",
+		"@casl/prisma": "^1.5.0",
 		"@fontsource/outfit": "^5.1.0",
 		"@fontsource/roboto-mono": "^5.1.0",
 		"@fontsource/vollkorn": "^5.1.1",
 		"@inlang/paraglide-js": "1.11.3",
 		"@inlang/paraglide-sveltekit": "0.11.1",
 		"@pothos/core": "^4.3.0",
+		"@pothos/plugin-complexity": "^4.1.0",
 		"@pothos/plugin-prisma": "^4.2.1",
 		"@pothos/plugin-prisma-utils": "^1.2.0",
 		"@pothos/plugin-simple-objects": "^4.1.0",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
-		"@tailwindcss/typography": "^0.5.14",
-		"@types/eslint": "^9.6.0",
+		"@pothos/plugin-tracing": "^1.1.0",
+		"@sveltejs/adapter-auto": "^3.2.5",
+		"@sveltejs/kit": "^2.7.1",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.8",
+		"@tailwindcss/typography": "^0.5.15",
+		"@types/eslint": "^9.6.1",
 		"autoprefixer": "^10.4.20",
 		"concurrently": "^9.0.1",
 		"cryptr": "^6.3.0",
 		"daisyui": "^4.12.13",
-		"eslint": "^9.0.0",
+		"eslint": "^9.12.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
+		"eslint-plugin-svelte": "^2.45.1",
+		"flag-icons": "^7.2.3",
+		"globals": "^15.11.0",
 		"graphql": "^16.9.0",
 		"graphql-yoga": "^5.7.0",
 		"houdini": "^1.2.64",
 		"houdini-svelte": "^1.2.64",
 		"openid-client": "^5.7.0",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"prettier-plugin-tailwindcss": "^0.6.5",
-		"prisma": "^5.21.0",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.7",
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"prisma": "^5.21.1",
 		"prisma-generator-pothos-codegen": "^0.7.1",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^4.0.0",
-		"tailwindcss": "^3.4.9",
+		"svelte": "^5.0.0-next.269",
+		"svelte-check": "^4.0.5",
+		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.0.0",
-		"vite": "^5.0.3",
+		"typescript-eslint": "^8.10.0",
+		"vite": "^5.4.9",
 		"zod": "^3.23.8"
 	},
-	"type": "module",
-	"dependencies": {
-		"@casl/ability": "^6.7.1",
-		"@casl/prisma": "^1.5.0",
-		"@pothos/plugin-complexity": "^4.1.0",
-		"@pothos/plugin-tracing": "^1.1.0"
-	}
+	"type": "module"
 }
