--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.8",
 		"@tailwindcss/typography": "^0.5.15",
 		"@types/eslint": "^9.6.1",
+		"@zerodevx/svelte-toast": "^0.9.6",
 		"autoprefixer": "^10.4.20",
 		"concurrently": "^9.0.1",
 		"cryptr": "^6.3.0",
@@ -45,7 +46,7 @@
 		"graphql-yoga": "^5.7.0",
 		"houdini": "^1.2.64",
 		"houdini-svelte": "^1.2.64",
-		"openid-client": "^5.7.0",
+		"openid-client": "^6.1.0",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
@@ -53,11 +54,16 @@
 		"prisma-generator-pothos-codegen": "^0.7.1",
 		"svelte": "^5.0.0-next.269",
 		"svelte-check": "^4.0.5",
+		"sveltekit-superforms": "^2.20.0",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.10.0",
+		"vanilla-cookieconsent": "^3.0.1",
 		"vite": "^5.4.9",
 		"zod": "^3.23.8"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"validator": "^13.12.0"
+	}
 }
