--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"concurrently": "^9.0.1",
 		"cryptr": "^6.3.0",
 		"daisyui": "^4.12.13",
+		"date-fns": "^4.1.0",
 		"eslint": "^9.12.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.45.1",
