✨ feat: implement working participant table

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"@fontsource/roboto-mono": "^5.1.0",
 		"@fontsource/vollkorn": "^5.1.1",
 		"@inlang/paraglide-js": "1.11.3",
-		"@inlang/paraglide-sveltekit": "0.11.1",
+		"@inlang/paraglide-sveltekit": "0.11.3",
 		"@pothos/core": "^4.3.0",
 		"@pothos/plugin-complexity": "^4.1.0",
 		"@pothos/plugin-prisma": "^4.2.1",
@@ -29,8 +29,8 @@
 		"@pothos/plugin-tracing": "^1.1.0",
 		"@svelte-plugins/datepicker": "^1.0.9",
 		"@sveltejs/adapter-auto": "^3.2.5",
-		"@sveltejs/kit": "^2.7.1",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.8",
+		"@sveltejs/kit": "^2.7.2",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tailwindcss/typography": "^0.5.15",
 		"@types/eslint": "^9.6.1",
 		"@zerodevx/svelte-toast": "^0.9.6",
@@ -39,23 +39,25 @@
 		"cryptr": "^6.3.0",
 		"daisyui": "^4.12.13",
 		"date-fns": "^4.1.0",
-		"eslint": "^9.12.0",
+		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.45.1",
 		"flag-icons": "^7.2.3",
 		"globals": "^15.11.0",
 		"graphql": "^16.9.0",
 		"graphql-yoga": "^5.7.0",
-		"houdini": "^1.2.64",
-		"houdini-svelte": "^1.2.64",
-		"openid-client": "^6.1.0",
+		"houdini": "^0.0.0-20241014224633",
+		"houdini-svelte": "^0.0.0-20241014224633",
+		"openid-client": "^6.1.1",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"prisma": "^5.21.1",
 		"prisma-generator-pothos-codegen": "^0.7.1",
-		"svelte": "^5.0.0-next.269",
+		"svelte": "^5.0.2",
 		"svelte-check": "^4.0.5",
+		"svelte-drawer-component": "^1.2.2",
+		"svelte-table": "^0.6.3",
 		"sveltekit-superforms": "^2.20.0",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3",
@@ -67,6 +69,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"fuse.js": "^7.0.0",
 		"validator": "^13.12.0"
 	}
 }
