--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
+		"module": "ESNext", // or "CommonJS"
+    "target": "ESNext", // or "ES6"
+    "allowSyntheticDefaultImports": true, // This should be true as well
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"resolveJsonModule": true,
