--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
 		"@fontsource/roboto-mono": "^5.1.0",
 		"@fontsource/vollkorn": "^5.1.1",
 		"@inlang/paraglide-js": "1.11.3",
-		"@inlang/paraglide-sveltekit": "0.11.3",
+		"@inlang/paraglide-sveltekit": "0.11.5",
 		"@pothos/core": "^4.3.0",
 		"@pothos/plugin-complexity": "^4.1.0",
-		"@pothos/plugin-prisma": "^4.2.1",
+		"@pothos/plugin-prisma": "^4.2.2",
 		"@pothos/plugin-prisma-utils": "^1.2.0",
 		"@pothos/plugin-simple-objects": "^4.1.0",
 		"@pothos/plugin-tracing": "^1.1.0",
 		"@svelte-plugins/datepicker": "^1.0.9",
-		"@sveltejs/adapter-auto": "^3.2.5",
+		"@sveltejs/adapter-auto": "^3.3.0",
 		"@sveltejs/kit": "^2.7.2",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tailwindcss/typography": "^0.5.15",
@@ -41,35 +41,33 @@
 		"date-fns": "^4.1.0",
 		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.45.1",
+		"eslint-plugin-svelte": "^2.46.0",
 		"flag-icons": "^7.2.3",
 		"globals": "^15.11.0",
 		"graphql": "^16.9.0",
 		"graphql-yoga": "^5.7.0",
-		"houdini": "^0.0.0-20241014224633",
-		"houdini-svelte": "^0.0.0-20241014224633",
-		"openid-client": "^6.1.1",
+		"houdini": "^1.3.0",
+		"houdini-svelte": "^2.0.0",
+		"openid-client": "^6.1.2",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"prisma": "^5.21.1",
 		"prisma-generator-pothos-codegen": "^0.7.1",
-		"svelte": "^5.0.2",
+		"svelte": "^5.0.5",
 		"svelte-check": "^4.0.5",
 		"svelte-drawer-component": "^1.2.2",
 		"svelte-table": "^0.6.3",
 		"sveltekit-superforms": "^2.20.0",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.10.0",
+		"typescript-eslint": "^8.11.0",
 		"vanilla-cookieconsent": "^3.0.1",
-		"vite": "^5.4.9",
+		"vite": "^5.4.10",
 		"world-countries": "^5.0.0",
-		"zod": "^3.23.8"
-	},
-	"type": "module",
-	"dependencies": {
+		"zod": "^3.23.8",
 		"fuse.js": "^7.0.0",
 		"validator": "^13.12.0"
-	}
+	},
+	"type": "module"
 }
