--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.0",
 		"flag-icons": "^7.2.3",
+		"fuse.js": "^7.0.0",
 		"globals": "^15.11.0",
 		"graphql": "^16.9.0",
 		"graphql-yoga": "^5.7.0",
 		"houdini": "^1.3.0",
 		"houdini-svelte": "^2.0.0",
+		"mermaid": "^11.3.0",
 		"openid-client": "^6.1.2",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
@@ -62,12 +64,11 @@
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.11.0",
+		"validator": "^13.12.0",
 		"vanilla-cookieconsent": "^3.0.1",
 		"vite": "^5.4.10",
 		"world-countries": "^5.0.0",
-		"zod": "^3.23.8",
-		"fuse.js": "^7.0.0",
-		"validator": "^13.12.0"
+		"zod": "^3.23.8"
 	},
 	"type": "module"
 }
