--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@zerodevx/svelte-toast": "^0.9.6",
 		"autoprefixer": "^10.4.20",
 		"concurrently": "^9.0.1",
+		"convert-iso-codes": "^1.0.10",
 		"cryptr": "^6.3.0",
 		"daisyui": "^4.12.13",
 		"date-fns": "^4.1.0",
