--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
 		"@prisma/client": "^5.20.0",
 		"@sinclair/typebox": "^0.33.15",
 		"@slack/webhook": "^7.0.3",
-		"@sveltejs/enhanced-img": "^0.3.8",
 		"@svelte-plugins/datepicker": "^1.0.9",
 		"@sveltejs/kit": "^2.6.3",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
+		"@types/lodash": "^4.17.10",
 		"@types/node-schedule": "^2.1.7",
 		"@weblogin/trendchart-elements": "^2.0.1",
 		"@zerodevx/svelte-toast": "^0.9.6",
@@ -34,10 +34,13 @@
 		"fuse.js": "^7.0.0",
 		"jose": "^5.9.3",
 		"lefthook": "^1.7.18",
+		"lodash": "^4.17.21",
 		"mermaid": "^11.3.0",
 		"nanoid": "^5.0.7",
 		"node-schedule": "^2.1.1",
 		"numeral": "^2.0.6",
+		"openapi-fetch": "^0.13.0",
+		"openapi-typescript": "^7.4.1",
 		"openid-client": "^5.7.0",
 		"postcss": "^8.4.47",
 		"postcss-load-config": "^6.0.1",
