✨ feat: add conference info card

--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
 		"world-countries": "^5.0.0",
 		"zod": "^3.23.8",
 		"codenamize-ts": "1.0.2",
-		"@faker-js/faker": "^9.2.0"
+		"@faker-js/faker": "^9.2.0",
+		"@thisux/sveltednd": "^0.0.16",
+		"munkres-algorithm": "^1.0.2"
 	},
 	"private": true,
 	"scripts": {
@@ -73,9 +75,5 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write ."
 	},
-	"type": "module",
-	"dependencies": {
-		"@thisux/sveltednd": "^0.0.16",
-		"munkres-algorithm": "^1.0.2"
-	}
+	"type": "module"
 }
