--- a/package.json
+++ b/package.json
@@ -76,7 +76,17 @@
 		"codenamize-ts": "1.0.2",
 		"@faker-js/faker": "^9.2.0",
 		"@thisux/sveltednd": "^0.0.16",
-		"munkres-algorithm": "^1.0.2"
+		"munkres-algorithm": "^1.0.2",
+		"@opentelemetry/api": "^1.9.0",
+		"@opentelemetry/exporter-trace-otlp-http": "^0.55.0",
+		"@opentelemetry/instrumentation": "^0.55.0",
+		"@opentelemetry/instrumentation-http": "^0.55.0",
+		"@opentelemetry/resources": "^1.28.0",
+		"@opentelemetry/sdk-trace-base": "^1.28.0",
+		"@opentelemetry/sdk-trace-node": "^1.28.0",
+		"@opentelemetry/semantic-conventions": "^1.28.0",
+		"@pothos/tracing-opentelemetry": "^1.1.0",
+		"@prisma/instrumentation": "^6.0.0"
 	},
 	"private": true,
 	"scripts": {
