✨ feat: add otel support

--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -52,6 +52,7 @@ services:
               }
           ]
         }
+
   # app:
   #   image: munifydelegator
   #   depends_on:
@@ -82,6 +83,23 @@ services:
   #     POSTGRES_URL: postgres://postgres:postgres@postgres:5432/postgres
   #     PRISMA_STUDIO_PORT: 5555
   #     POSTGRES_PATH: /postgres
+
+
+# web dashboard available at http://localhost:16686
+  jaeger:
+    image: jaegertracing/jaeger
+    ports:
+      - "5778:5778"
+      - "16686:16686"
+      - "4317:4317"
+      - "4318:4318"
+      - "14250:14250"
+      - "14268:14268"
+      - "9411:9411"
+    command: [
+      "--set", "receivers.otlp.protocols.http.endpoint=0.0.0.0:4318",
+      "--set", "receivers.otlp.protocols.grpc.endpoint=0.0.0.0:4317"
+    ]
 
 volumes:
   delegator-dev:
