--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,6 @@ PUBLIC_OIDC_CLIENT_ID=default
 # PUBLIC_OIDC_CLIENT_ID=275671515582758948@dev
 
 OIDC_ROLE_CLAIM=urn:zitadel:iam:org:project:275671427955294244:roles
-
 PUBLIC_FEEDBACK_URL=https://fb-delegator.dmun.de
+
+# OTEL_ENDPOINT_URL=http://localhost:4318/v1/traces
