--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"svelte-table": "^0.6.3",
 		"sveltekit-superforms": "^2.20.1",
 		"tailwindcss": "^3.4.15",
+		"tsup": "^8.3.5",
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.16.0",
 		"validator": "^13.12.0",
@@ -84,7 +85,7 @@
 		"dev": "concurrently \"bun run dev:server\" \"bun run dev:docker\"",
 		"dev:server": "svelte-kit sync && vite",
 		"dev:docker": "docker compose -f ./dev.docker-compose.yml up",
-		"build": "vite build",
+		"build": "vite build && bun ./scripts/tasksBuild.ts",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
