--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@prisma/client": "^5.22.0",
 		"@slack/webhook": "^7.0.3",
 		"@svelte-plugins/datepicker": "^1.0.9",
+		"@sveltejs/adapter-node": "^5.2.10",
 		"@sveltejs/kit": "^2.8.5",
 		"@sveltejs/vite-plugin-svelte": "^4.0.2",
 		"@tailwindcss/typography": "^0.5.15",
@@ -66,7 +67,6 @@
 		"prisma": "^5.22.0",
 		"prisma-generator-pothos-codegen": "^0.7.1",
 		"svelte": "^5.2.9",
-		"svelte-adapter-bun": "^0.5.2",
 		"svelte-check": "^4.1.0",
 		"svelte-drawer-component": "^1.2.2",
 		"svelte-table": "^0.6.3",
