--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 		"svelte-check": "^4.1.0",
 		"svelte-drawer-component": "^1.2.2",
 		"svelte-table": "^0.6.3",
+		"sveltekit-breadcrumbs": "^0.0.3",
 		"sveltekit-superforms": "^2.20.1",
 		"tailwindcss": "^3.4.15",
 		"tsup": "^8.3.5",
