feat(pdf-generator): add multi-page PDF generation functionality with pdf-lib

--- a/package.json
+++ b/package.json
@@ -104,5 +104,8 @@
 		"format": "prettier --write .",
 		"add-translation": "bun run add_new_translation.ts"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"pdf-lib": "^1.17.1"
+	}
 }
