--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
 		"vanilla-cookieconsent": "^3.0.1",
 		"vite": "^5.4.11",
 		"world-countries": "^5.0.0",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"@dipser/epc-qr-code.js": "^1.0.3"
 	},
 	"private": true,
 	"scripts": {
@@ -106,5 +107,6 @@
 		"format": "prettier --write .",
 		"add-translation": "bun run add_new_translation.ts"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {}
 }
