✨ feature: Add mock OAuth2 landing page and update docker-compose configuration

--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -64,8 +64,11 @@ services:
                   }
                 ]
               }
-          ]
+          ],
+          "loginPagePath": "/static/mock-oidc-landingpage.html"
         }
+    volumes:
+      - ./mock-oidc-landingpage.html:/static/mock-oidc-landingpage.html
 
   # app:
   #   image: munifydelegator
