🐞 fix: update gql file

--- a/.github/workflows/build_run.yml
+++ b/.github/workflows/build_run.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
-      - run: bun install
+      - run: bun install --frozen-lockfile
       - run: bun run build
       - run: bun run check
       - run: |
